Fix project card not stretching layout properly

--- a/style.css
+++ b/style.css
@@ -208,6 +208,7 @@ body {
     padding: 1.5rem 1rem;
     box-shadow: 2px 2px 6px -4px #777;
     border-radius: 6px;
+    height: 100%;
 }
 
 .projectCard >.projectCard-linkWrapper {
@@ -215,6 +216,7 @@ body {
     gap: 0.4rem;
     text-decoration: none;
     color: inherit;
+    height: 100%;
 }
 
 .projectCard-title {
@@ -227,7 +229,7 @@ body {
 }
 
 .projectCard-actions {
-    justify-self: end;
+    place-self: end;
     display: flex;
     gap: 1rem;
 }
